# ncvreg

./: .gitignore  README.md  pyproject.toml
requirements/: requirements.txt
src/ncvreg/: __init__.py  base.py  utils.py
src/ncvreg/models/: __init__.py  base.py  coordinate_descent_gaussian.py  coordinate_descent_glm.py  ncvreg.py
src/scripts/: load_data.R  load_data.py
tests/: test_initialization.py
