[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ncvreg"
authors = [
    {name = "Joseph Powell", email = "jrp208@case.edu"}
]
version = "0.0.1"
requires-python = ">3.10"
dependencies = ["numpy", "numba"]

[tool.setuptools.pacakges.find]
where = ["src"]
include = ["ncvreg"]
