[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ncvreg"
version = "0.0.5"
authors = [
    {name = "Joseph Powell", email = "jrp208@case.edu"}
]
description = "Python implementation of the nonconvex penalized regression R package 'ncvreg'"
readme = "README.md"
requires-python = ">3.10"
dependencies = ["numpy", "numba"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ncvreg*"]
namespaces = false
